Added PackageService and PackageController with Swagger integration